[package]
name = "ski_pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = "0"
serde_json = "*"
strum = "0.24"
strum_macros = "0.24"
serde = {version="1.0", features=["derive"]}
egg = "0.9.1"
bytes = "0.4"
prost = "0.5"

[build-dependencies]
prost-build = { version = "0.5" }
