[package]
name = "ski_pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
strum = "0.24"
strum_macros = "0.24"
serde = {version="1.0", features=["derive"]}
egg = "0.9.1"
bytes = "0.4"
prost = "0.5"
ordered-float = { version="3.0", features=["serde"]}
parse-display = "0.6.0"
ffi_utils="*"
libc="*"

[lib]
crate-type=["staticlib"]


[build-dependencies]
prost-build = { version = "0.5" }
